--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -149,6 +149,21 @@
            font-weight:400;
            line-height: 1rem;
        }
+
+       .data {
+       .badge-success{
+        color:$success  !important;
+        border:1px solid $success !important;
+        background-color:white !important;
+        // text-transform: lowercase;
+       }
+
+      .badge-primary{
+        color:$primary  !important;
+        border:1px solid $primary !important;
+        background-color:white !important;
+       }
+    }
     
      
     }
