--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -150,6 +150,21 @@
        line-height: 1rem;
    }
 
+   .data {
+    .badge-success{
+        color:$success  !important;
+        border:1px solid $success !important;
+        background-color:white !important;
+        // text-transform: lowercase;
+    }
+
+    .badge-primary{
+        color:$primary  !important;
+        border:1px solid $primary !important;
+        background-color:white !important;
+    }
+}
+
  
 }
 
