--- a/packages/common-sass/src/scss/variables/_custom-variables.scss
+++ b/packages/common-sass/src/scss/variables/_custom-variables.scss
@@ -28,6 +28,8 @@ $spotify:        #1db954 !default;
 $vine:           #00bf8f !default;
 $foursquare:     #1073af !default;
 $vimeo:          #aad450 !default;
+$brown:          #966f33 !default;
+// $brown:          #BD7AF6 !default;
 
 $brands-colors: () !default;
 $brands-colors: map-merge((
