--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -139,7 +139,7 @@
         color:$gray-700;
         font-size:0.8rem;
         // line-height: 1.6rem;
-        text-transform: capitalize;
+        // text-transform: capitalize;
         letter-spacing: 0.02rem;
         font-weight: 500;
         
