--- a/packages/common-sass-client/src/scss/variables/_custom-variables.scss
+++ b/packages/common-sass-client/src/scss/variables/_custom-variables.scss
@@ -29,6 +29,7 @@ $vine:           #00bf8f !default;
 $foursquare:     #1073af !default;
 $vimeo:          #aad450 !default;
 $brown:          #966f33 !default;
+$purple:          #800080 ;
 
 $brands-colors: () !default;
 $brands-colors: map-merge((
