--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -8,9 +8,8 @@
  @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
  @import '~bootstrap/scss/mixins';
 
-
-.ag-root-wrapper{
-    .patient-column, .doctor-column{
+ .ag-root-wrapper{
+    .patient-column{
         margin-top:0.1rem;
         margin-bottom:0.3rem;
 
@@ -19,7 +18,7 @@
             font-weight: 500;
             padding:0;
 
-            
+           
 
             &:nth-child(2){
                 font-size: 0.7rem;
@@ -38,12 +37,79 @@
                     // @include border-radius(4px);
                 }
 
+                .badge{
+                    width:auto !important;
+                    padding:2px 4px !important;
+                    text-align: center !important;
+                    margin-right:3px;
+                     
+                    font-size: 75% !important;
+                    font-weight: 500 !important;
+                    line-height: 1 !important;
+                    
+                }
+    
+                .badge-success{
+                    color:$success  ;
+                    border:1px solid $success ;
+                    background-color:transparent ;
+                    
+                    // text-transform: lowercase;
+                }
+        
+                .badge-primary{
+                    color:$primary  ;
+                    border:1px solid $primary ;
+                    background-color:transparent ;
+                }
+
+              
+
             }
             
         }
     }
 
-   
+   .doctor-column{
+        margin-top:0.1rem;
+        margin-bottom:0.3rem;
+
+         li{
+            line-height: 1.4rem;
+            font-weight: 500;
+            padding:0;
+
+          
+            &:nth-child(2){
+                font-size: 0.7rem;
+                font-weight: 500;
+                // padding:0 3px;
+                font-weight: $gray-300;
+                color:$gray-600;
+                span{
+                    // border:1px solid $gray-400;
+                    // background-color:$gray-100;
+                    font-size: 0.7rem;
+                    font-weight: 500;
+                    // padding:0 3px;
+                    font-weight: $gray-300;
+                    color:$gray-600;
+                    // @include border-radius(4px);
+                }
+
+              
+
+            }
+            
+        }
+    }
+    .browser{
+        img{
+        width:11px;
+        margin-right: 2px;
+        height: auto;
+        }
+        }
     .fa{
         color:$gray-900;
     }
