--- a/packages/apps/client/src/container/ClientActivitiesLog/activity-log.scss
+++ b/packages/apps/client/src/container/ClientActivitiesLog/activity-log.scss
@@ -107,7 +107,7 @@
     .legend-box{
         display: block;
     //    min-width: 320px;
-        width:400px;
+        width:420px;
         height: auto;
          border:1px solid #ccc;
         margin:20px auto;
@@ -142,6 +142,10 @@
                 // text-align: center;
                 border-radius: 0.25rem;
             
+            }
+
+            .legend-label{
+                line-height: 1;
             }
 
             .data{
