--- a/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -64,6 +64,12 @@
                     background-color:transparent ;
                 }
 
+                .badge-info{
+                    color:$info  ;
+                    border:1px solid $info ;
+                    background-color:transparent ;
+                }
+
               
 
             }
