--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -63,6 +63,12 @@
                     background-color:transparent ;
                 }
 
+                .badge-info{
+                    color:$info  ;
+                    border:1px solid $info ;
+                    background-color:transparent ;
+                }
+
               
 
             }
