log-revenue-details

--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -39,13 +39,15 @@
 
                 .badge{
                     width:auto !important;
-                    padding:2px 4px !important;
+                    padding:0.2rem 0.3rem !important;
                     text-align: center !important;
                     margin-right:3px;
                      
-                    font-size: 75% !important;
+                    font-size: 60% !important;
                     font-weight: 500 !important;
-                    line-height: 1 !important;
+                    line-height:0.7 !important;
+                    margin-top:-1px;
+                   
                     
                 }
     
