--- a/packages/apps/client/src/container/ClientTransactionLog/transaction-log.scss
+++ b/packages/apps/client/src/container/ClientTransactionLog/transaction-log.scss
@@ -22,7 +22,6 @@
 	-moz-border-radius-bottomleft: $bottomleft;
 }
 
-
 #appointment-log {
 
 
@@ -223,7 +222,7 @@
                 justify-content: center;
                 flex-direction: column;
                 text-align: left;
-                font-size: 14px;
+                font-size: 15px;
                 // width:calc(100% - 80px);
                
                 flex:2 0 60px;
@@ -233,12 +232,13 @@
 
                 span{
                     display: block;
+                    
 
                   
                 }
 
                 .label{
-                   font-weight: 500;
+                   font-weight:400;
                    font-size: 14px;
                 //    background-color: $gray-100;
                    display:inline-block;
@@ -250,8 +250,8 @@
 
                .amt,.apt{
                     display: inline;
-                    color: $gray-800;
-                    font-weight: 500;
+                    // color: $gray-700;
+                    // font-weight: 500;
                     font-size: 15px;
                }
 
@@ -265,16 +265,18 @@
                .follow-up{
                 font-size:12px ;
                 .fa-tag{
-                    color:$purple;
+                    color:$gray-600;
                 }
 
                 .fl-label{
-                    color:$purple;
+                    color:$gray-600;
                     display: inline;
                 }
 
                 .amt,.apt{
+                    font-weight: normal;
                     font-size:12px ;
+                    // color:$gray-600;
                 }
             }
                
