--- a/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -40,13 +40,15 @@
 
                 .badge{
                     width:auto !important;
-                    padding:2px 4px !important;
+                    padding:0.2rem 0.3rem !important;
                     text-align: center !important;
                     margin-right:3px;
                      
-                    font-size: 75% !important;
+                    font-size: 60% !important;
                     font-weight: 500 !important;
-                    line-height: 1 !important;
+                    line-height:0.7 !important;
+                    margin-top:-1px;
+                   
                     
                 }
     
@@ -90,18 +92,16 @@
             &:nth-child(2){
                 font-size: 0.7rem;
                 font-weight: 500;
-                // padding:0 3px;
                 font-weight: $gray-300;
                 color:$gray-600;
                 span{
-                    // border:1px solid $gray-400;
-                    // background-color:$gray-100;
+              
                     font-size: 0.7rem;
                     font-weight: 500;
-                    // padding:0 3px;
+                
                     font-weight: $gray-300;
                     color:$gray-600;
-                    // @include border-radius(4px);
+                
                 }
 
               
