--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -153,6 +153,10 @@
       // text-transform: lowercase;
     }
 
+    .pd-followup{
+      font-size: 12px;
+    }
+
     .badge-primary {
       color: $primary !important;
       border: 1px solid $primary !important;
