--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -150,7 +150,13 @@
        line-height: 1rem;
    }
 
+  
+
    .data {
+    .pd-followup{
+        font-size: 12px;
+      }
+      
     .badge-success{
         color:$success  !important;
         border:1px solid $success !important;
