--- a/packages/common-sass-client/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass-client/src/scss/pages/_dashboard.scss
@@ -659,6 +659,19 @@
             width:60%;
             text-align: center;
             margin:0 auto;
+
+            .mid-data{
+                width:100%;
+                height:40px;
+                left:50%;
+                top:50%;
+                transform: translate(-50%,-50%);
+                text-align: center;
+                line-height: 18px;
+                 z-index:999999999999999 ;
+                }
+                
+                   
         }
 
         // .title{
