--- a/packages/common-sass-client/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass-client/src/scss/pages/_dashboard.scss
@@ -659,8 +659,10 @@
             width:60%;
             text-align: center;
             margin:0 auto;
+            position: relative;
 
             .mid-data{
+                position: absolute;
                 width:100%;
                 height:40px;
                 left:50%;
@@ -669,6 +671,9 @@
                 text-align: center;
                 line-height: 18px;
                  z-index:999999999999999 ;
+                 font-weight:500;
+                 font-size:0.9rem;
+       
                 }
                 
                    
