--- a/packages/common-sass-client/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass-client/src/scss/pages/_dashboard.scss
@@ -496,6 +496,53 @@
         height: 100%;
         // min-height: 300px;
 
+        .dr-number,.dr-amount{
+            position: relative;
+            
+
+            .dr-details{
+                display: none;
+                position: absolute;
+                top:0;
+                li{
+                    $color:$gray-700;
+                }
+
+                .fa-money{
+                    color:$success !important;
+
+                    &.red{
+                        color:$danger !important;
+                    }
+                }
+
+                .fa{
+                    margin-right:3px;
+                }
+
+                .fa-check-circle-o{
+                    color:$success;
+                }
+
+                .fa-close{
+                    color:$danger;
+                }
+            }
+
+                
+
+            &:hover{
+                color:transparent;
+                .dr-details{
+                    display:block;
+                    color:$gray-700 !important;
+                    li{
+                        color:$gray-700 !important;
+                    }
+                }
+            }
+        }
+
         .app-log{
             background-color:$white;
             padding:20px 40px;
@@ -555,20 +602,20 @@
              margin-left:100px;
          }
 
-         .doctor-revenue-revenue{
-            width:100%;
+        //  .doctor-revenue-revenue{
+        //     width:100%;
   
-            .data-image{
-              //   width:25px;
-                margin-top: 4px;
-            }
+        //     .data-image{
+        //       //   width:25px;
+        //         margin-top: 4px;
+        //     }
   
-            ul li{
-                line-height: 22px;
-            }
+        //     ul li{
+        //         line-height: 22px;
+        //     }
   
   
-        }
+        // }
 
     }
 
