--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -496,6 +496,53 @@
         height: 100%;
         // min-height: 300px;
 
+        .dr-number,.dr-amount{
+            position: relative;
+            
+
+            .dr-details{
+                display: none;
+                position: absolute;
+                top:0;
+                li{
+                    $color:$gray-700;
+                }
+
+                .fa-money{
+                    color:$success !important;
+
+                    &.red{
+                        color:$danger !important;
+                    }
+                }
+
+                .fa{
+                    margin-right:3px;
+                }
+
+                .fa-check-circle-o{
+                    color:$success;
+                }
+
+                .fa-close{
+                    color:$danger;
+                }
+            }
+
+                
+
+            &:hover{
+                color:transparent;
+                .dr-details{
+                    display:block;
+                    color:$gray-700 !important;
+                    li{
+                        color:$gray-700 !important;
+                    }
+                }
+            }
+        }
+
         .app-log{
             background-color:$white;
             padding:20px 40px;
@@ -555,20 +602,20 @@
              margin-left:100px;
          }
 
-         .doctor-revenue-revenue{
-            width:100%;
+        //  .doctor-revenue-revenue{
+        //     width:100%;
   
-            .data-image{
-              //   width:25px;
-                margin-top: 4px;
-            }
+        //     .data-image{
+        //       //   width:25px;
+        //         margin-top: 4px;
+        //     }
   
-            ul li{
-                line-height: 22px;
-            }
+        //     ul li{
+        //         line-height: 22px;
+        //     }
   
   
-        }
+        // }
 
     }
 
@@ -637,8 +684,6 @@
         }
     }
 
-    
-
     .appointment-box{
         background-color:$white;
         padding:30px;
@@ -661,26 +706,37 @@
             width:60%;
             text-align: center;
             margin:0 auto;
+            position: relative;
+
+            .mid-data{
+                position: absolute;
+                width:100%;
+                height:40px;
+                left:50%;
+                top:50%;
+                transform: translate(-50%,-50%);
+                text-align: center;
+                line-height: 18px;
+                 z-index:999999999999999 ;
+                 font-weight:500;
+                 font-size:0.9rem;
+       
+                }
+                
+                   
         }
 
-      
-
-        // ul li{
-        //     width:50%;
-        //     display: inline-block;
-        //     text-align: center;
+        // .title{
         //     font-size: 14px;
-        //     font-weight: 400;
-        //     color:$gray-700;
-
-            // span{
-            //     font-size: 18px;
-            //     color:$gray-700;
-            //     font-weight: 400;
-            // }
-
+        //     font-weight: 500;
+        //     margin:0;
         // }
 
+        // p{
+        //     font-size: 22px;
+        //     font-weight: 500;
+        //     margin:0;
+        // }
         .total-count{
             margin-top:10px;
              text-align: center;
@@ -689,99 +745,81 @@
          }
      
          .legend-box{
-            display: block;
-        //    min-width: 320px;
-            width:320px;
-            height: auto;
-             border:1px solid #ccc;
-            margin:20px auto;
-            padding:12px;
-            @include border-radius(0.5rem);
-    
-            ul li{
-                width:100%;
-                float:left;
-                height: 26px;
-                display: flex;
-                flex-direction: row;
-                justify-content: left;
-                text-align: center;
-                // align-items: center;
-    
-                // span{
-                //     // border:1px solid #ccc;
-                //     width:8px;
-                //     height: 6px;
-                // }
-    
-                .legend{
-                    width:15px;
-                    height:15px;
-                    display: inline-block;
-                    padding: 0.55em 0.55em;
-                    margin-right:6px;
-                    background-color:$primary;
-                    line-height: 1;
-                    // text-align: center;
-                    border-radius: 0.25rem;
-                
-                }
-    
-                .data{
-                    font-weight: 500;
-                    font-size: 12px;
-                    color:$gray-900
-                }
-                
-    
-                &:nth-child(1){
-                   .legend{
-                       background-color: rgba(0, 99, 255, 0.2);
-                    }
-                }
-    
-                &:nth-child(2){
-                    .legend{
-                       background-color:$cogent;
-                    }
-                }
-
-                &:nth-child(3){
-                   .legend{
-                       background-color: rgba(0, 99, 255, 0.6);
-                   }
-               }
-    
-            }
-    
-            p{
-                text-align: center;
-                font-weight:500;
-                font-size:0.9rem;
-            }
-        }
-
+             display: block;
+         //    min-width: 320px;
+             width:320px;
+             height: auto;
+              border:1px solid #ccc;
+             margin:20px auto;
+             padding:12px;
+             @include border-radius(0.5rem);
      
+             ul li{
+                 width:100%;
+                 float:left;
+                 height: 26px;
+                 display: flex;
+                 flex-direction: row;
+                 justify-content: left;
+                 text-align: center;
+                 // align-items: center;
+     
+                 // span{
+                 //     // border:1px solid #ccc;
+                 //     width:8px;
+                 //     height: 6px;
+                 // }
+     
+                 .legend{
+                     width:15px;
+                     height:15px;
+                     display: inline-block;
+                     padding: 0.55em 0.55em;
+                     margin-right:6px;
+                     background-color:$primary;
+                     line-height: 1;
+                     // text-align: center;
+                     border-radius: 0.25rem;
+                 
+                 }
+     
+                 .data{
+                     font-weight: 500;
+                     font-size: 12px;
+                     color:$gray-900
+                 }
+                 
+     
+                 &:nth-child(1){
+                    .legend{
+                        background-color: rgba(0, 99, 255, 0.2);
+                     }
+                 }
+     
+                 &:nth-child(2){
+                     .legend{
+                        background-color:$cogent;
+                     }
+                 }
 
-        // .color-code{
-        //     display:inline-block;
-        //     width:10px;
-        //     height: 10px;
-        //     background-color:$info;
-        //    vertical-align: middle;
-        //    margin-bottom:6px;
-        //    margin-right:2px;
-        //     @include border-radius(50%);
+                 &:nth-child(3){
+                    .legend{
+                        background-color: rgba(0, 99, 255, 0.6);
+                    }
+                }
+     
+             }
+     
+             p{
+                 text-align: center;
+                 font-weight:500;
+                 font-size:0.9rem;
+             }
+         }
 
-        //     &.code1{
-        //         // background-color:lighten($cogent,20%);
-        //        background-color: rgba(0, 99, 255, 0.2);
-        //     }
+      
 
-        //     &.code2{
-        //         background-color:$cogent;
-        //     }
-        // }
+       
 
     }
 
