--- a/packages/apps/admin/src/container/ClientActivitiesLog/activity-log.scss
+++ b/packages/apps/admin/src/container/ClientActivitiesLog/activity-log.scss
@@ -32,6 +32,31 @@
 
     }
 
+    .doughnut-chart{
+        // width:60%;
+        // text-align: center;
+        margin:0 auto;
+        position: relative;
+
+        .mid-data{
+            position: absolute;
+            width:100%;
+            height:40px;
+            left:50%;
+            top:50%;
+            transform: translate(-50%,-50%);
+            text-align: center;
+            line-height: 18px;
+             z-index:999999999999999 ;
+             font-weight:500;
+             font-size:0.9rem;
+   
+            }
+            
+               
+    }
+
+
     .badge {
         display: inline-block;
         padding: 0.55em 0.75em;
