--- a/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -79,6 +79,23 @@
         }
     }
 
+    .di-column{
+        display: flex;
+        flex-direction: row;
+        .data-image{
+           width:40px;
+           height: 40px;
+           margin-right:8px;
+        }
+
+       .di-details{
+           margin:0;
+                li{
+                   line-height: 22px; 
+                }
+       }
+    }
+
    .doctor-column{
         margin-top:0.1rem;
         margin-bottom:0.3rem;
