doctor-image-datatable-height-issue

--- a/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -82,10 +82,17 @@
     .di-column{
         display: flex;
         flex-direction: row;
+        // display: none;
         .data-image{
-           width:40px;
-           height: 40px;
-           margin-right:8px;
+           width:42px;
+           height: 42px;
+           margin-right:10px;
+           flex-shrink: 0;
+
+           img{
+               width: 42px;
+               height: 42px;
+           }
         }
 
        .di-details{
